Add favicon and social cards

--- a/index.html
+++ b/index.html
@@ -3,8 +3,36 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>FrontFest 19</title>
+  <title>FrontFest 2019</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta name="description" content="La conferencia para toda la comunidad front-end en Madrid">
+  <meta name="keywords" content="evento, meetup, conferencia, madrid, software, front-end, frontend, html, css, javascript, desarrollo web" />
+  <meta name="theme-color" content="#F5B63F">
+  <link rel="canonical" href="https://frontfest.es" />
+
+  <!-- twitter card  -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@frontfest" />
+  <meta name="twitter:creator" content="@frontfest" />
+  <meta name="twitter:url" content="https://frontfest.es" />
+  <meta name="twitter:title" content="La conferencia para toda la comunidad front-end en Madrid" /> <!-- maximum 140 char -->
+  <meta name="twitter:description" content="Madrid, 9 de febrero de 2019" /> <!-- maximum 140 char -->
+  <meta name="twitter:image" content="http://frontfest.es/images/logo-280x280.png" />  <!-- when you post this page url in twitter , this image will be shown -->
+  <!-- twitter card ends from here -->
+
+  <!-- facebook open graph  -->
+  <meta property="og:title" content="La conferencia para toda la comunidad front-end en Madrid" />
+  <meta property="og:url" content="http://frontfest.es" />
+  <meta property="og:locale" content="es_ES" />
+  <meta property="og:site_name" content="FrontFest" />
+  <meta property="og:description" content="Madrid, 9 de febrero de 2019" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="http://frontfest.es/images/logo-280x280.png" /> <!-- when you post this page url in facebook, this image will be shown -->
+  <!-- facebook open graph ends from here -->
+  
+  <link rel="icon" href="images/logo-280x280.png" />
+
   <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
 </head>
 <body>
