--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
   <meta name="twitter:site" content="@frontfest" />
   <meta name="twitter:creator" content="@frontfest" />
   <meta name="twitter:url" content="https://frontfest.es" />
-  <meta name="twitter:title" content="La conferencia para toda la comunidad front-end en Madrid" /> <!-- maximum 140 char -->
+  <meta name="twitter:title" content="La conferencia para toda la comunidad front-end" /> <!-- maximum 140 char -->
   <meta name="twitter:description" content="Madrid, 9 de febrero de 2019" /> <!-- maximum 140 char -->
   <meta name="twitter:image" content="http://frontfest.es/images/logo-280x280.png" />  <!-- when you post this page url in twitter , this image will be shown -->
   <!-- twitter card ends from here -->
 
   <!-- facebook open graph  -->
-  <meta property="og:title" content="La conferencia para toda la comunidad front-end en Madrid" />
+  <meta property="og:title" content="La conferencia para toda la comunidad front-end" />
   <meta property="og:url" content="http://frontfest.es" />
   <meta property="og:locale" content="es_ES" />
   <meta property="og:site_name" content="FrontFest" />
