--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head>  
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>FrontFest 2019</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta name="description" content="La conferencia para toda la comunidad front-end en Madrid">
+  <title>FrontFest 2019</title>
+
+  <meta name="description" content="La conferencia para toda la comunidad front-end">
   <meta name="keywords" content="evento, meetup, conferencia, madrid, software, front-end, frontend, html, css, javascript, desarrollo web" />
   <meta name="theme-color" content="#F5B63F">
-  <link rel="canonical" href="https://frontfest.es" />
 
   <!-- twitter card  -->
   <meta name="twitter:card" content="summary" />
@@ -18,20 +18,21 @@
   <meta name="twitter:url" content="https://frontfest.es" />
   <meta name="twitter:title" content="La conferencia para toda la comunidad front-end" /> <!-- maximum 140 char -->
   <meta name="twitter:description" content="Madrid, 9 de febrero de 2019" /> <!-- maximum 140 char -->
-  <meta name="twitter:image" content="http://frontfest.es/images/logo-280x280.png" />  <!-- when you post this page url in twitter , this image will be shown -->
+  <meta name="twitter:image" content="https://frontfest.es/images/logo-280x280.png" />  <!-- when you post this page url in twitter , this image will be shown -->
   <!-- twitter card ends from here -->
 
   <!-- facebook open graph  -->
   <meta property="og:title" content="La conferencia para toda la comunidad front-end" />
-  <meta property="og:url" content="http://frontfest.es" />
+  <meta property="og:url" content="https://frontfest.es" />
   <meta property="og:locale" content="es_ES" />
   <meta property="og:site_name" content="FrontFest" />
   <meta property="og:description" content="Madrid, 9 de febrero de 2019" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="http://frontfest.es/images/logo-280x280.png" /> <!-- when you post this page url in facebook, this image will be shown -->
+  <meta property="og:image" content="https://frontfest.es/images/logo-280x280.png" /> <!-- when you post this page url in facebook, this image will be shown -->
   <!-- facebook open graph ends from here -->
   
   <link rel="icon" href="images/logo-280x280.png" />
+  <link rel="canonical" href="https://frontfest.es" />
 
   <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
 </head>
@@ -39,7 +40,7 @@
   <div class="wrapper">
 
     <nav class="nav">
-      <a href="http://frontfest.es/blog">
+      <a href="https://frontfest.es/blog">
         <div class="blog-icon">
           <svg enable-background="new 0 0 512 512" viewBox="0 0 512 512" width="100%" xmlns="http://www.w3.org/2000/svg">
             <path d="m455.1 137.9-32.4 32.4-81-81.1 32.4-32.4c6.6-6.6 18.1-6.6 24.7 0l56.3 56.4c6.8 6.8 6.8 17.9 0 24.7zm-270.7 271-81-81.1 209.4-209.7 81 81.1zm-99.7-42 60.6 60.7-84.4 23.8zm399.3-282.6-56.3-56.4c-11-11-50.7-31.8-82.4 0l-285.3 285.5c-2.5 2.5-4.3 5.5-5.2 8.9l-43 153.1c-2 7.1.1 14.7 5.2 20 5.2 5.3 15.6 6.2 20 5.2l153-43.1c3.4-.9 6.4-2.7 8.9-5.2l285.1-285.5c22.7-22.7 22.7-59.7 0-82.5z" fill="#efefef"/>
@@ -89,8 +90,8 @@
         </a>
 
         <div class="subtitle">
-          <a class="left" href="http://frontfest.es/2017">2017</a>
-          <a class="left" href="http://frontfest.es/2018">2018</a>
+          <a class="left" href="https://frontfest.es/2017">2017</a>
+          <a class="left" href="https://frontfest.es/2018">2018</a>
           <div class="right">
             <strong>09 FEB 2019</strong> @ <a href="http://www.lanavemadrid.com/">LA NAVE MADRID</a>
           </div>
