--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <title>FrontFest 2019</title>
 
-  <meta name="description" content="La conferencia para toda la comunidad front-end • Madrid, 9 de febrero de 2019">
+  <meta name="description" content="La conferencia para toda la comunidad front-end @ Madrid, 9 de febrero de 2019">
   <meta name="keywords" content="evento, meetup, conferencia, madrid, software, front-end, frontend, html, css, javascript, desarrollo web" />
   <meta name="theme-color" content="#F5B63F">
 
