--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
           <ul class="content-ul">
             <li>Dispondrás de <strong>45 minutos, incluyendo preparación, charla y turno de preguntas</strong>. Recomendamos por tanto que la charla en sí misma dure hasta un máximo de 40 minutos.
             <li>Al igual que otros años, correremos con todos tus <strong>gastos de desplazamiento</strong>. Si vienes desde fuera de Madrid, también <strong>te pagaremos el alojamiento</strong>.</li>
-            <li>Recibirás una invitación para asistir a la <strong>cena de ponentes</strong> el día anterior al evento.</li>
-            <li>Este año, además, recibirás <strong>una entrada al evento extra</strong> para regalar a quien desees.</li>
+            <li>Podrás asistir a la <strong>cena de ponentes</strong> el día anterior al evento.</li>
+            <li>Este año, además, recibirás <strong>una entrada extra para acceder al evento</strong> que podrás regalar a quien desees.</li>
           </ul>
         </div>
         <a href="https://www.koliseo.com/frontfest/2019/r4p/5733179054882816#/" target="_blank" class="btn">
