--- a/index.html
+++ b/index.html
@@ -39,80 +39,60 @@
 <body>
   <div class="wrapper">
 
-    <aside class="aside">
+    <aside class="aside aside-top">
 
       <div class="aside-wrapper">
-        <div>
-          <svg viewBox="0 0 275.20084 111.89716" width="220px" xmlns="http://www.w3.org/2000/svg">
-            <!-- FRONT -->
-            <g class="logo-blue-3" enable-background="new" fill="#aaa" stroke-width="2.3" transform="translate(-232.15325 -93.930699)">
-              <path d="m367.79108 146.67894v-30.1175h18.54378v3.39897h-14.9727v9.85273h13.29472v3.39897h-13.29472v13.46683z"/>
-              <path d="m396.18288 129.81314h3.74317q1.8931 0 3.0978-.47328 1.24773-.5163 1.97915-1.24772.73143-.73143 1.0326-1.63495.30118-.90353.30118-1.721 0-.94655-.5163-1.80705-.47328-.90353-1.33378-1.5489-.81747-.6884-2.02217-1.07563-1.16168-.38722-2.49545-.38722h-3.7862zm-3.57108 16.8658v-30.1175h7.09913q1.46285 0 3.22687.47327 1.80705.43025 3.35595 1.41983 1.5489.98957 2.5815 2.53847 1.0326 1.5489 1.0326 3.74318 0 3.22687-1.63495 5.42115-1.59192 2.15125-4.68972 2.83965l6.45375 13.68195h-3.87225l-6.32468-13.4238h-.73142-2.9257v13.4238z"/>
-              <path d="m415.13673 131.66321q0-3.14082 1.20471-5.93745 1.2047-2.83965 3.2699-4.94787 2.10822-2.10823 4.90485-3.31293 2.79662-1.24772 5.98047-1.24772 3.14083 0 5.93745 1.24772 2.83965 1.2047 4.94788 3.31293 2.10822 2.10822 3.31292 4.94787 1.24773 2.79663 1.24773 5.93745 0 3.18385-1.24773 5.98048-1.2047 2.79662-3.31292 4.90485-2.10823 2.0652-4.94788 3.2699-2.79662 1.2047-5.93745 1.2047-3.18385 0-5.98047-1.2047-2.79663-1.2047-4.90485-3.2699-2.0652-2.10823-3.2699-4.90485-1.20471-2.79663-1.20471-5.98048zm3.57108 0q0 2.49545.90353 4.68973.94655 2.15125 2.53847 3.7862 1.63495 1.59192 3.7862 2.53847 2.15125.94655 4.60368.94655 2.45242 0 4.60367-.94655 2.15125-.94655 3.74318-2.53847 1.63495-1.63495 2.53847-3.7862.94655-2.19428.94655-4.68973 0-2.49545-.94655-4.6467-.90352-2.19427-2.53847-3.82922-1.59193-1.63495-3.74318-2.5815-2.15125-.94655-4.60367-.94655-2.45243 0-4.60368.94655-2.15125.94655-3.7862 2.5815-1.59192 1.63495-2.53847 3.82922-.90353 2.15125-.90353 4.6467z"/>
-              <path d="m479.19424 116.56144v31.4943q-5.55023-5.89443-11.0144-11.7028-5.46418-5.80838-11.0144-11.7028-.21513-.30118-.43025-.55933-.1721-.25815-.38723-.55932.043.3442.043.6884.043.3442.0861.6884v21.77065h-3.57108v-31.4943q5.55023 6.0235 11.0144 11.96095 5.46418 5.89442 11.0144 11.91792.21513.30118.38723.55933.21512.25815.43025.55932-.043-.3442-.0861-.6884 0-.3442-.043-.6884v-22.24392z"/>
-              <path d="m507.35411 116.56144v3.39897h-10.06786v26.71853h-3.57107v-26.71853h-10.1539v-3.39897z"/>
-            </g>
-            <!-- FEST -->
-            <g class="logo-yellow" enable-background="new" fill="#fff" stroke-width="2.8" transform="translate(-232.15325 -93.930699)">
-              <path d="m366.13677 184.75261v-30.1175h17.85538v1.721h-16.09136v12.34817h14.41338v1.721h-14.41338v14.32733z"/>
-              <path d="m391.43076 184.75261v-30.1175h17.85538v1.721h-16.09135v12.34817h14.41338v1.721h-14.41338v12.60633h16.6937v1.721z"/>
-              <path d="m432.24267 157.17358q-.30118.3442-.55933.6884-.21512.3442-.47327.6884-.38723-.3442-.94655-.73142-.55933-.43025-1.33378-.77445-.73142-.38723-1.67797-.60235-.90353-.25815-1.97915-.25815-1.50588 0-2.62453.5163-1.11865.47327-1.8931 1.33377-.73142.81748-1.11865 1.93613-.3442 1.07562-.3442 2.2373 0 1.24772.38723 2.15125.43025.8605 1.11865 1.46285.73142.60235 1.721 1.07562.98957.43025 2.15125.81748 1.3768.47327 3.05477 1.07562 1.721.55933 3.22688 1.59193 1.50587.98957 2.49545 2.53847 1.0326 1.50588 1.0326 3.82923 0 1.8931-.73143 3.442-.6884 1.5489-1.93612 2.66755-1.2047 1.07562-2.88268 1.67797-1.63495.55933-3.48502.55933-1.67798 0-3.14083-.43025-1.41982-.43025-2.53847-1.07563-1.11865-.64537-1.97915-1.3768-.81748-.73142-1.29075-1.29075l1.2047-1.2047q.60235.60235 1.3768 1.24773.77445.64537 1.67797 1.2047.94655.5163 2.0652.8605 1.11865.3442 2.4094.3442 1.46285 0 2.79663-.43025 1.33377-.47328 2.36637-1.29075 1.0326-.8605 1.63495-2.0652.64538-1.2047.64538-2.7536 0-1.93613-.8605-3.18385-.8605-1.24773-2.15125-2.0652-1.24773-.81748-2.7536-1.33378-1.50588-.5163-2.79663-.94655-.81747-.25815-1.93612-.6884-1.07563-.43025-2.10823-1.2047-.98957-.77445-1.76402-1.93612-.73143-1.2047-.77445-2.96873-.0861-1.41982.30117-2.83965.43025-1.46285 1.3768-2.5815.94655-1.16167 2.45243-1.8931 1.50587-.73142 3.65712-.73142 1.63495 0 3.31293.55932 1.721.55933 3.6141 2.15125z"/>
-              <path d="m461.23009 154.63511v1.721h-11.0144v28.3965h-1.76403v-28.3965h-11.0144v-1.721z"/>
-            </g>
-            <!-- LOGO -->
-            <g fill-rule="evenodd" transform="matrix(.35204081 0 0 .35204081 -1056.38248 -1601.851799)">
-              <path class="logo-yellow" d="m3199.2879 4634.5954 35.2735 35.3866-113.5406 114.3602-36.2312-36.2694" fill="#fff"/>
-              <path class="logo-red-1" d="m3125.599 4661.1603-30.5368-30.5368-94.3235 94.559 60.9786-.1312z" fill="#bbb"/>
-              <path class="logo-blue-1" d="m3193.8488 4757.0822 30.5368 30.5369 94.3235-94.5732-60.9786.1311z" fill="#bbb"/>
-              <path class="logo-red-2" d="m3174.2829 4837.7218-30.3188 30.3188-143.2254-142.8581 60.9786-.1312z" fill="#999"/>
-              <path class="logo-blue-2" d="m3145.1649 4580.5066 30.3188-30.3188 143.2254 142.8581-60.9786.1311z" fill="#999"/>
-              <path class="logo-red-1" d="m3120.9729 4784.374v-72.1095l-36.2353 35.8401z" fill="#bbb"/>
-              <path class="logo-blue-1" d="m3199.24 4634.6273-.2074 71.409 35.5288-36.0543z" fill="#bbb"/>
-            </g>
-          </svg>
-          <img class="aside-year" src="images/19.png">
-          <p class="aside-message">La conferencia para toda la comunidad front-end</p>
-          <ul class="aside-list">
-            <li><a href="https://blog.frontfest.es" target="_blank">> Blog</a></li>
-          </ul>
-        </div>
-        <div>
-          <p><strong>09 FEB 2019</strong> @ MADRID</p>
-          <p><a href="http://www.lanavemadrid.com/" target="_blank"><img src="images/la-nave-madrid.png"></a></p>
-          <p><a class="aside-hashtag" href="https://twitter.com/hashtag/FrontFest19?src=hash" target="_blank">#FrontFest19</a></p>
-          <p>Ediciones anteriores:
-            <a href="https://2017.frontfest.es" target="_blank">2017</a>
-            •
-            <a href="https://2018.frontfest.es" target="_blank">2018</a>
-          </p>
-          <p>
-            <a href="https://twitter.com/frontfest" target="_blank">Twitter</a>
-            •
-            <a href="https://www.youtube.com/channel/UC3mQnUb4NiwhD67H465_sBw" target="_blank">YouTube</a>
-            •
-            <a href="https://telegram.me/frontfest" target="_blank">Telegram</a>
-          </p>
-        </div>
+        <svg viewBox="0 0 275.20084 111.89716" width="220px" xmlns="http://www.w3.org/2000/svg">
+          <!-- FRONT -->
+          <g class="logo-blue-3" enable-background="new" fill="#aaa" stroke-width="2.3" transform="translate(-232.15325 -93.930699)">
+            <path d="m367.79108 146.67894v-30.1175h18.54378v3.39897h-14.9727v9.85273h13.29472v3.39897h-13.29472v13.46683z"/>
+            <path d="m396.18288 129.81314h3.74317q1.8931 0 3.0978-.47328 1.24773-.5163 1.97915-1.24772.73143-.73143 1.0326-1.63495.30118-.90353.30118-1.721 0-.94655-.5163-1.80705-.47328-.90353-1.33378-1.5489-.81747-.6884-2.02217-1.07563-1.16168-.38722-2.49545-.38722h-3.7862zm-3.57108 16.8658v-30.1175h7.09913q1.46285 0 3.22687.47327 1.80705.43025 3.35595 1.41983 1.5489.98957 2.5815 2.53847 1.0326 1.5489 1.0326 3.74318 0 3.22687-1.63495 5.42115-1.59192 2.15125-4.68972 2.83965l6.45375 13.68195h-3.87225l-6.32468-13.4238h-.73142-2.9257v13.4238z"/>
+            <path d="m415.13673 131.66321q0-3.14082 1.20471-5.93745 1.2047-2.83965 3.2699-4.94787 2.10822-2.10823 4.90485-3.31293 2.79662-1.24772 5.98047-1.24772 3.14083 0 5.93745 1.24772 2.83965 1.2047 4.94788 3.31293 2.10822 2.10822 3.31292 4.94787 1.24773 2.79663 1.24773 5.93745 0 3.18385-1.24773 5.98048-1.2047 2.79662-3.31292 4.90485-2.10823 2.0652-4.94788 3.2699-2.79662 1.2047-5.93745 1.2047-3.18385 0-5.98047-1.2047-2.79663-1.2047-4.90485-3.2699-2.0652-2.10823-3.2699-4.90485-1.20471-2.79663-1.20471-5.98048zm3.57108 0q0 2.49545.90353 4.68973.94655 2.15125 2.53847 3.7862 1.63495 1.59192 3.7862 2.53847 2.15125.94655 4.60368.94655 2.45242 0 4.60367-.94655 2.15125-.94655 3.74318-2.53847 1.63495-1.63495 2.53847-3.7862.94655-2.19428.94655-4.68973 0-2.49545-.94655-4.6467-.90352-2.19427-2.53847-3.82922-1.59193-1.63495-3.74318-2.5815-2.15125-.94655-4.60367-.94655-2.45243 0-4.60368.94655-2.15125.94655-3.7862 2.5815-1.59192 1.63495-2.53847 3.82922-.90353 2.15125-.90353 4.6467z"/>
+            <path d="m479.19424 116.56144v31.4943q-5.55023-5.89443-11.0144-11.7028-5.46418-5.80838-11.0144-11.7028-.21513-.30118-.43025-.55933-.1721-.25815-.38723-.55932.043.3442.043.6884.043.3442.0861.6884v21.77065h-3.57108v-31.4943q5.55023 6.0235 11.0144 11.96095 5.46418 5.89442 11.0144 11.91792.21513.30118.38723.55933.21512.25815.43025.55932-.043-.3442-.0861-.6884 0-.3442-.043-.6884v-22.24392z"/>
+            <path d="m507.35411 116.56144v3.39897h-10.06786v26.71853h-3.57107v-26.71853h-10.1539v-3.39897z"/>
+          </g>
+          <!-- FEST -->
+          <g class="logo-yellow" enable-background="new" fill="#fff" stroke-width="2.8" transform="translate(-232.15325 -93.930699)">
+            <path d="m366.13677 184.75261v-30.1175h17.85538v1.721h-16.09136v12.34817h14.41338v1.721h-14.41338v14.32733z"/>
+            <path d="m391.43076 184.75261v-30.1175h17.85538v1.721h-16.09135v12.34817h14.41338v1.721h-14.41338v12.60633h16.6937v1.721z"/>
+            <path d="m432.24267 157.17358q-.30118.3442-.55933.6884-.21512.3442-.47327.6884-.38723-.3442-.94655-.73142-.55933-.43025-1.33378-.77445-.73142-.38723-1.67797-.60235-.90353-.25815-1.97915-.25815-1.50588 0-2.62453.5163-1.11865.47327-1.8931 1.33377-.73142.81748-1.11865 1.93613-.3442 1.07562-.3442 2.2373 0 1.24772.38723 2.15125.43025.8605 1.11865 1.46285.73142.60235 1.721 1.07562.98957.43025 2.15125.81748 1.3768.47327 3.05477 1.07562 1.721.55933 3.22688 1.59193 1.50587.98957 2.49545 2.53847 1.0326 1.50588 1.0326 3.82923 0 1.8931-.73143 3.442-.6884 1.5489-1.93612 2.66755-1.2047 1.07562-2.88268 1.67797-1.63495.55933-3.48502.55933-1.67798 0-3.14083-.43025-1.41982-.43025-2.53847-1.07563-1.11865-.64537-1.97915-1.3768-.81748-.73142-1.29075-1.29075l1.2047-1.2047q.60235.60235 1.3768 1.24773.77445.64537 1.67797 1.2047.94655.5163 2.0652.8605 1.11865.3442 2.4094.3442 1.46285 0 2.79663-.43025 1.33377-.47328 2.36637-1.29075 1.0326-.8605 1.63495-2.0652.64538-1.2047.64538-2.7536 0-1.93613-.8605-3.18385-.8605-1.24773-2.15125-2.0652-1.24773-.81748-2.7536-1.33378-1.50588-.5163-2.79663-.94655-.81747-.25815-1.93612-.6884-1.07563-.43025-2.10823-1.2047-.98957-.77445-1.76402-1.93612-.73143-1.2047-.77445-2.96873-.0861-1.41982.30117-2.83965.43025-1.46285 1.3768-2.5815.94655-1.16167 2.45243-1.8931 1.50587-.73142 3.65712-.73142 1.63495 0 3.31293.55932 1.721.55933 3.6141 2.15125z"/>
+            <path d="m461.23009 154.63511v1.721h-11.0144v28.3965h-1.76403v-28.3965h-11.0144v-1.721z"/>
+          </g>
+          <!-- LOGO -->
+          <g fill-rule="evenodd" transform="matrix(.35204081 0 0 .35204081 -1056.38248 -1601.851799)">
+            <path class="logo-yellow" d="m3199.2879 4634.5954 35.2735 35.3866-113.5406 114.3602-36.2312-36.2694" fill="#fff"/>
+            <path class="logo-red-1" d="m3125.599 4661.1603-30.5368-30.5368-94.3235 94.559 60.9786-.1312z" fill="#bbb"/>
+            <path class="logo-blue-1" d="m3193.8488 4757.0822 30.5368 30.5369 94.3235-94.5732-60.9786.1311z" fill="#bbb"/>
+            <path class="logo-red-2" d="m3174.2829 4837.7218-30.3188 30.3188-143.2254-142.8581 60.9786-.1312z" fill="#999"/>
+            <path class="logo-blue-2" d="m3145.1649 4580.5066 30.3188-30.3188 143.2254 142.8581-60.9786.1311z" fill="#999"/>
+            <path class="logo-red-1" d="m3120.9729 4784.374v-72.1095l-36.2353 35.8401z" fill="#bbb"/>
+            <path class="logo-blue-1" d="m3199.24 4634.6273-.2074 71.409 35.5288-36.0543z" fill="#bbb"/>
+          </g>
+        </svg>
+        <img class="aside-year" src="images/19.png">
+        <p class="aside-message">La conferencia para toda la comunidad front-end</p>
+        <ul class="aside-list">
+          <li><a href="https://blog.frontfest.es" target="_blank">> Blog</a></li>
+        </ul>
       </div>
-
     </aside>
 
-    <div class="content">
-      <div class="content-wrapper">
+    <main class="main">
+      <div class="main-wrapper">
         <h1>¡Participa en nuestro Call for Proposals!</h1>
-        <h2 class="content-dates">
-          <img class="content-calendar" src="images/calendar.svg">
+        <h2 class="main-dates">
+          <img class="main-calendar" src="images/calendar.svg">
           <p>Del <strong>7 de septiembre</strong> al <strong>11 de noviembre</strong> de 2018 <a href="frontfest_c4p.ics">(.ics)</a></p>
         </h2>
-        <div class="content-text">
+        <div class="main-text">
           <p>Nuestro objetivo es que FrontFest sea una experiencia interesante para los asistentes y toda la comunidad en general, donde podamos conocernos, inspirarnos, recabar ideas y aprender de gente experimentada, pero también que nos permita descubrir nuevos talentos del mundo del frontend.</p>
-          <ul class="content-ul">
+          <ul class="main-ul">
             <li>Valoraremos las propuestas <strong>autocontenidas, originales e innovadoras</strong>, ya sea por los temas a tratar o por el propio formato.</li>
             <li>Nos encantan las <strong>charlas técnicas</strong>, de cualquier nivel, con concrección y rigurosidad.</li>
             <li>También los gustan mucho las <strong>charlas más transversales</strong>, que hablen de las nuevas experiencias que podemos aportar como desarrolladores, la interacción con otras disciplinas, la repercusión social y la visión de futuro.</li>  
           </ul>
           <p>Si tu propuesta resulta seleccionada, ten en cuenta que:</p>
-          <ul class="content-ul">
+          <ul class="main-ul">
             <li>Dispondrás de <strong>45 minutos, incluyendo preparación, charla y turno de preguntas</strong>. Recomendamos por tanto que la charla en sí misma dure hasta un máximo de 40 minutos.
             <li>Al igual que otros años, correremos con todos tus <strong>gastos de desplazamiento</strong>. Si vienes desde fuera de Madrid, también <strong>te pagaremos el alojamiento</strong>.</li>
             <li>Podrás asistir a la <strong>cena de ponentes</strong> el día anterior al evento.</li>
@@ -120,10 +100,31 @@
           </ul>
         </div>
         <a href="https://www.koliseo.com/frontfest/2019/r4p/5733179054882816#/" target="_blank" class="btn">
-          Envíanos tu propuesta <img class="content-arrow" src="images/arrow-point-to-right.svg">
+          Envíanos tu propuesta <img class="main-arrow" src="images/arrow-point-to-right.svg">
         </a>
       </div>
-    </div>
+    </main>
+
+    <aside class="aside aside-bottom">
+      <div class="aside-wrapper">
+        <p><strong>09 FEB 2019</strong> @ MADRID</p>
+        <p><a href="http://www.lanavemadrid.com/" target="_blank"><img src="images/la-nave-madrid.png"></a></p>
+        <p><a class="aside-hashtag" href="https://twitter.com/hashtag/FrontFest19?src=hash" target="_blank">#FrontFest19</a></p>
+        <p>Ediciones anteriores:
+          <a href="https://2017.frontfest.es" target="_blank">2017</a>
+          •
+          <a href="https://2018.frontfest.es" target="_blank">2018</a>
+        </p>
+        <p>
+          <a href="https://twitter.com/frontfest" target="_blank">Twitter</a>
+          •
+          <a href="https://www.youtube.com/channel/UC3mQnUb4NiwhD67H465_sBw" target="_blank">YouTube</a>
+          •
+          <a href="https://telegram.me/frontfest" target="_blank">Telegram</a>
+        </p>
+      </div>
+
+    </aside>
 
   </div>
 </body>
