--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         </svg>
         <img class="aside-year" src="images/19.png">
         <p class="aside-message">La conferencia para toda la comunidad front-end</p>
+        <h3>09 FEB 2019 @ MADRID</h3>
         <ul class="aside-list">
           <li><a href="https://blog.frontfest.es" target="_blank">> Blog</a></li>
         </ul>
@@ -107,7 +108,6 @@
 
     <aside class="aside aside-bottom">
       <div class="aside-wrapper">
-        <p><strong>09 FEB 2019</strong> @ MADRID</p>
         <p><a href="http://www.lanavemadrid.com/" target="_blank"><img src="images/la-nave-madrid.png"></a></p>
         <p><a class="aside-hashtag" href="https://twitter.com/hashtag/FrontFest19?src=hash" target="_blank">#FrontFest19</a></p>
         <p>Ediciones anteriores:
