--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <ul class="main-ul">
             <li>Valoraremos las propuestas <strong>autocontenidas, originales e innovadoras</strong>, ya sea por los temas a tratar o por el propio formato.</li>
             <li>Nos encantan las <strong>charlas técnicas</strong>, de cualquier nivel, con concrección y rigurosidad.</li>
-            <li>También los gustan mucho las <strong>charlas más transversales</strong>, que hablen de las nuevas experiencias que podemos aportar como desarrolladores, la interacción con otras disciplinas, la repercusión social y la visión de futuro.</li>  
+            <li>También los gustan mucho las <strong>charlas más transversales</strong>, que hablen de las nuevas experiencias que podemos aportar como desarrolladores, la interacción con otras disciplinas, la repercusión social, la inclusividad y la visión de futuro.</li>  
           </ul>
           <p>Si tu propuesta resulta seleccionada, ten en cuenta que:</p>
           <ul class="main-ul">
@@ -99,6 +99,7 @@
             <li>Podrás asistir a la <strong>cena de ponentes</strong> el día anterior al evento.</li>
             <li>Este año, además, recibirás <strong>una entrada extra para acceder al evento</strong> que podrás regalar a quien desees.</li>
           </ul>
+          <p>FrontFest es una conferencia sin ánimo de lucro y con vocación integradora. No queremos cerrar puertas a nadie ni que dejes de enviar una propuesta por motivos sociales o económicos. Si tienes cualquier duda, pregunta o idea para mejorar, escríbenos un email o contacta a través de las redes sociales.</p>
         </div>
         <a href="https://www.koliseo.com/frontfest/2019/r4p/5733179054882816#/" target="_blank" class="btn">
           Envíanos tu propuesta <img class="main-arrow" src="images/arrow-point-to-right.svg">
@@ -116,6 +117,8 @@
           <a href="https://2018.frontfest.es" target="_blank">2018</a>
         </p>
         <p>
+          <a href="mailto:frontfest@gmail.com">Email</a>
+          •
           <a href="https://twitter.com/frontfest" target="_blank">Twitter</a>
           •
           <a href="https://www.youtube.com/channel/UC3mQnUb4NiwhD67H465_sBw" target="_blank">YouTube</a>
