--- a/index.html
+++ b/index.html
@@ -79,8 +79,24 @@
     </aside>
 
     <main class="main">
+      <div class="alert">
+        ¡Anímate a enviar una propuesta! Quedan muy pocos días para que finalice el Call For Proposals. <a href="#c4p">Más información »</a>
+      </div>
+      <div class="main-intro">
+        <div class="main-intro-pictures">
+          <img class="half-width" src="images/photos/frontfest-main-01.jpg">
+          <img class="half-width" src="images/photos/frontfest-main-02.jpg">
+          <img class="half-width" src="images/photos/frontfest-main-03.jpg">
+          <img class="half-width" src="images/photos/frontfest-main-04.jpg">
+        </div>
+        <div class="main-intro-logo">
+          <div>
+            <img src="./images/frontfest-logo.svg">            
+          </div>
+        </div>
+      </div>
       <div class="main-wrapper">
-        <h1>¡Participa en nuestro Call for Proposals!</h1>
+        <h1 id="c4p">¡Participa en nuestro Call for Proposals!</h1>
         <h2 class="main-dates">
           <img class="main-calendar" src="images/calendar.svg">
           <p>Del <strong>7 de septiembre</strong> al <strong>11 de noviembre</strong> de 2018 <a href="frontfest_c4p.ics">(.ics)</a></p>
