Fix image heights

--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
       </div>
       <div class="main-intro">
         <div class="main-intro-pictures">
-          <img class="half-width" src="images/photos/frontfest-main-01.jpg">
-          <img class="half-width" src="images/photos/frontfest-main-02.jpg">
-          <img class="half-width" src="images/photos/frontfest-main-03.jpg">
-          <img class="half-width" src="images/photos/frontfest-main-04.jpg">
+          <img src="images/photos/frontfest-main-01.jpg">
+          <img src="images/photos/frontfest-main-02.jpg">
+          <img src="images/photos/frontfest-main-03.jpg">
+          <img src="images/photos/frontfest-main-04.jpg">
         </div>
         <div class="main-intro-logo">
           <div>
