Add sponsorship table

--- a/index.html
+++ b/index.html
@@ -73,15 +73,19 @@
         <p class="aside-message">La conferencia para toda la comunidad front-end</p>
         <h3>09 FEB 2019 @ MADRID</h3>
         <ul class="aside-list">
-          <li><a href="https://blog.frontfest.es" target="_blank">> Blog</a></li>
+          <li><a href="https://blog.frontfest.es" target="_blank">→ Blog</a></li>
+          <li><a href="#c4p">→ Call For Proposals</a></li>
+          <li><a href="#sponsorship-table">→ Patrocinios</a></li>
         </ul>
       </div>
     </aside>
 
     <main class="main">
+
       <div class="alert">
         ¡Anímate a enviar una propuesta! Quedan muy pocos días para que finalice el Call For Proposals. <a href="#c4p">Más información »</a>
       </div>
+
       <div class="main-intro">
         <div class="main-intro-pictures">
           <img src="images/photos/frontfest-main-01.jpg">
@@ -95,6 +99,7 @@
           </div>
         </div>
       </div>
+
       <div class="main-wrapper">
         <h1 id="c4p">¡Participa en nuestro Call for Proposals!</h1>
         <h2 class="main-dates">
@@ -120,6 +125,51 @@
         <a href="https://www.koliseo.com/frontfest/2019/r4p/5733179054882816#/" target="_blank" class="btn">
           Envíanos tu propuesta <img class="main-arrow" src="images/arrow-point-to-right.svg">
         </a>
+      </div>
+
+      <hr>
+
+      <div class="main-wrapper">
+        <h1 id="sponsorship-table">Tabla de patrocinios</h1>
+        <p>Contacta con nosotros por <a href="mailto:frontfest@gmail.com">email</a> para obtener información adicional.
+          También puedes descargar el dossier de patrocinios en formato PDF en los siguientes enlaces: <a href="./pdf/DossierPatrociniosES-FrontFest19.pdf">[ES]</a>
+          <a href="./pdf/SponsorsDossierEN-FrontFest19.pdf">[EN]</a>.</p>
+        <table>
+          <thead>
+            <tr>
+              <th></th><th>Platinum <small>(máx. 3)</small></th><th>Gold <small>(máx. 4)</small></th><th>Silver <small>(∞)</small></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Tamaño del logo (web, rollups, etc.)</td><td>L</td><td>M</td><td>S</td>
+            </tr>
+            <tr>
+              <td>Entradas para la conferencia</td><td>6</td><td>4</td><td>2</td>
+            </tr>
+            <tr>
+              <td>Tweets promocionales</td><td>5</td><td>3</td><td>2</td>
+            </tr>
+            <tr>
+              <td>Item en la bolsa de bienvenida</td><td>✓</td><td>✓</td><td>✓</td>
+            </tr>
+            <tr>
+              <td>Stand</td><td>✓</td><td>✓</td><td></td>
+            </tr>
+            <tr>
+              <td>Post en nuestro blog</td><td>✓</td><td>✓</td><td></td>
+            </tr>
+            <tr>
+              <td>Cena con organizadores y ponentes (2 personas)</td><td>✓</td><td></td><td></td>
+            </tr>
+          </tbody>
+          <tfoot>
+            <tr>
+              <th></th><th>2500<small>€ (+IVA)</small></th><th>1750<small>€ (+IVA)</small></th><th>600<small>€ (+IVA)</small></th>
+            </tr>
+          </tfoot>
+        </table>
+        <p>También aceptamos patrocinios en especies (1 tweet promocional, logo XS).</p>
       </div>
     </main>
 
