--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>FrontFest 2019</title>
+  <title>FrontFest '19</title>
 
   <meta name="description" content="La conferencia para toda la comunidad front-end @ Madrid, 9 de febrero de 2019 #FrontFest19">
   <meta name="keywords" content="evento, meetup, conferencia, madrid, software, front-end, frontend, html, css, javascript, desarrollo web" />
@@ -71,6 +71,7 @@
         </svg>
         <img class="aside-year" src="images/19.png">
         <p class="aside-message">La conferencia para toda la comunidad front-end</p>
+        <p><strong>< 3ª edición ></strong></p>
         <h3>09 FEB 2019 @ MADRID</h3>
         <ul class="aside-list">
           <li><a href="https://blog.frontfest.es" target="_blank">→ Blog</a></li>
@@ -171,6 +172,21 @@
         </table>
         <p>También aceptamos patrocinios en especies (1 tweet promocional, logo XS).</p>
       </div>
+
+      <div class="main-wrapper">
+        <h1 id="sponsorship-table">Quienes somos</h1>
+        <ul class="list black">
+          <li><span><a target="_blank" href="https://twitter.com/LuisCalvoDiaz">Luis Calvo</a></span></li>
+          <li><span><a target="_blank" href="https://twitter.com/luisddm_">Luis de Dios</a></span></li>
+          <li><span><a target="_blank" href="https://twitter.com/noemedinaweb">Noemi Medina</a></span></li>
+          <li><span><a target="_blank" href="https://twitter.com/v4n3ss4ms">Vanessa Medina</a></span></li>              
+          <li><span><a target="_blank" href="https://twitter.com/marinalopezyap">Marina López</a></span></li>
+          <li><span><a target="_blank" href="https://twitter.com/JuanRioPacheco">Juan del Río</a></span></li>
+          <li><span><a target="_blank" href="https://twitter.com/rubnvp">Rubén Valseca</a></span></li>
+          <li><span><a target="_blank" href="https://twitter.com/ignaciodenuevo">Ignacio Villanueva</a></span></li>
+        </ul>
+      </div>
+
     </main>
 
     <aside class="aside aside-bottom">
