--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
         <ul class="aside-list">
           <li><a href="https://blog.frontfest.es" target="_blank">→ Blog</a></li>
           <li><a href="#c4p">→ Call For Proposals</a></li>
-          <li><a href="#sponsorship-table">→ Patrocinios</a></li>
+          <li><a href="#tabla-patrocinios">→ Tabla de patrocinios</a></li>
+          <li><a href="#cdc">→ Código de conducta</a></li>
+          <li><a href="#quienes-somos">→ Quiénes somos</a></li>
         </ul>
       </div>
     </aside>
@@ -131,9 +133,9 @@
       <hr>
 
       <div class="main-wrapper">
-        <h1 id="sponsorship-table">Tabla de patrocinios</h1>
-        <p>Contacta con nosotros por <a href="mailto:frontfest@gmail.com">email</a> para obtener información adicional.
-          También puedes descargar el dossier de patrocinios en formato PDF en los siguientes enlaces: <a href="./pdf/DossierPatrociniosES-FrontFest19.pdf">[ES]</a>
+        <h1 id="tabla-patrocinios">Tabla de patrocinios</h1>
+        <p>Si tu empresa quiere colaborar patrocinando nuestra conferencia, <strong>contáctanos por <a href="mailto:frontfest@gmail.com">email</a> y te daremos toda la información necesaria.</strong>
+          Además, puedes descargar el <strong>dossier de patrocinios en formato PDF</strong> en los siguientes enlaces: <a href="./pdf/DossierPatrociniosES-FrontFest19.pdf">[ES]</a>
           <a href="./pdf/SponsorsDossierEN-FrontFest19.pdf">[EN]</a>.</p>
         <table>
           <thead>
@@ -170,21 +172,44 @@
             </tr>
           </tfoot>
         </table>
-        <p>También aceptamos patrocinios en especies (1 tweet promocional, logo XS).</p>
+        <p>También aceptamos <strong>patrocinios en especies</strong> (1 tweet promocional, logo XS).</p>
       </div>
 
+      <hr>
+
       <div class="main-wrapper">
-        <h1 id="sponsorship-table">Quienes somos</h1>
-        <ul class="list black">
-          <li><span><a target="_blank" href="https://twitter.com/LuisCalvoDiaz">Luis Calvo</a></span></li>
-          <li><span><a target="_blank" href="https://twitter.com/luisddm_">Luis de Dios</a></span></li>
-          <li><span><a target="_blank" href="https://twitter.com/noemedinaweb">Noemi Medina</a></span></li>
-          <li><span><a target="_blank" href="https://twitter.com/v4n3ss4ms">Vanessa Medina</a></span></li>              
-          <li><span><a target="_blank" href="https://twitter.com/marinalopezyap">Marina López</a></span></li>
-          <li><span><a target="_blank" href="https://twitter.com/JuanRioPacheco">Juan del Río</a></span></li>
-          <li><span><a target="_blank" href="https://twitter.com/rubnvp">Rubén Valseca</a></span></li>
-          <li><span><a target="_blank" href="https://twitter.com/ignaciodenuevo">Ignacio Villanueva</a></span></li>
+        <h1 id="cdc">Código de conducta</h1>
+        <p><strong>FrontFest es un evento en el que no se permitirá ningún tipo de abuso ni discriminación por motivos de sexo, procedencia, raza, religión, discapacidad, aspecto físico, orientación sexual e identidad. Los participantes que violen estas reglas pueden ser sancionados o expulsados del evento a discreción.</strong></p>
+        <p>FrontFest intenta favorecer la comunicación y los debates constructivos en un ambiente seguro, solidario, respetable y diverso.</p>
+        <p>Serán consideradas conductas abusivas la siguientes:</p>
+        <ul class="main-ul">
+          <li>Comentarios ofensivos relativo al género, identidad u orientación sexual, discapacidad, aspecto físico, edad, raza, religión, procedencia o creencias religiosas.</li>
+          <li>Comentarios relacionados con el estilo de vida de algún asistente al evento como los relacionados con hábitos alimentarios, salud, familia, trabajo, etc.</li>
+          <li>La reproducción de imágenes sexuales en los espacios públicos, así como conductas intimidatorias o contactos físicos inapropiados.</li>
+          <li>Grabación o fotografía inadecuada de cualquiera de los asistentes.</li>
+          <li>La intimidación, persecución, filmación, fotografía o interrupción sistemática en las ponencias, serán también considerado situación de abuso.</li>
+          <li>No se tolerarán bromas que puedan ofender, chistes, contenido machista, xenófobo, LGBTófobo o cualquier tipo de manifestación que pudieran ser una cuestión de burla u odio a cualquier asistente al evento.</li>
         </ul>
+        <p>Los organizadores pedimos la colaboración de todos los asistentes, así pues si sufres algún tipo de conducta abusiva u observas que alguien puede estar siendo víctima de ella, te rogamos encarecidamente que nos lo comuniques para tomar las medidas oportunas.</p>
+        <p>En cualquier caso, las medidas disciplinarias dependerán siempre de la decisión de los organizadores, y en caso de llegar a producirse una expulsión, nunca existirá posibilidad de reembolso del precio de la entrada.</p>
+      </div>
+
+      <hr>
+
+      <div class="main-wrapper">
+        <h1 id="quienes-somos">Quiénes somos</h1>
+        <p>FrontFest es una conferencia sin ánimo de lucro organizada por un equipo de 8 personas en su tiempo libre.</p>
+        <ul class="list-founders">
+          <li><a target="_blank" href="https://twitter.com/LuisCalvoDiaz">Luis Calvo</a></li>
+          <li><a target="_blank" href="https://twitter.com/luisddm_">Luis de Dios</a></li>
+          <li><a target="_blank" href="https://twitter.com/noemedinaweb">Noemi Medina</a></li>
+          <li><a target="_blank" href="https://twitter.com/v4n3ss4ms">Vanessa Medina</a></li>              
+          <li><a target="_blank" href="https://twitter.com/marinalopezyap">Marina López</a></li>
+          <li><a target="_blank" href="https://twitter.com/JuanRioPacheco">Juan del Río</a></li>
+          <li><a target="_blank" href="https://twitter.com/rubnvp">Rubén Valseca</a></li>
+          <li><a target="_blank" href="https://twitter.com/ignaciodenuevo">Ignacio Villanueva</a></li>
+        </ul>
+        <p><strong>FrontFest '19</strong> © 2018-2019</p>
       </div>
 
     </main>
