--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>  
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -69,7 +69,7 @@
             <path class="logo-blue-1" d="m3199.24 4634.6273-.2074 71.409 35.5288-36.0543z" fill="#bbb"/>
           </g>
         </svg>
-        <img class="aside-year" src="images/19.png">
+        <img class="aside-year" alt="FrontFest '19" src="images/19.png">
         <p class="aside-message">La conferencia para toda la comunidad front-end</p>
         <p><strong>< 3ª edición ></strong></p>
         <h3>09 FEB 2019 @ MADRID</h3>
@@ -91,14 +91,14 @@
 
       <div class="main-intro">
         <div class="main-intro-pictures">
-          <img src="images/photos/frontfest-main-01.jpg">
-          <img src="images/photos/frontfest-main-02.jpg">
-          <img src="images/photos/frontfest-main-03.jpg">
-          <img src="images/photos/frontfest-main-04.jpg">
+          <img src="images/photos/frontfest-main-01.jpg" alt="Edición anterior de FrontFest">
+          <img src="images/photos/frontfest-main-02.jpg" alt="Edición anterior de FrontFest">
+          <img src="images/photos/frontfest-main-03.jpg" alt="Edición anterior de FrontFest">
+          <img src="images/photos/frontfest-main-04.jpg" alt="Edición anterior de FrontFest">
         </div>
         <div class="main-intro-logo">
           <div>
-            <img src="./images/frontfest-logo.svg">            
+            <img src="./images/frontfest-logo.svg" alt="FrontFest">            
           </div>
         </div>
       </div>
@@ -106,7 +106,7 @@
       <div class="main-wrapper">
         <h1 id="c4p">¡Participa en nuestro Call for Proposals!</h1>
         <h2 class="main-dates">
-          <img class="main-calendar" src="images/calendar.svg">
+          <img class="main-calendar" src="images/calendar.svg" alt="Calendario">
           <p>Del <strong>7 de septiembre</strong> al <strong>11 de noviembre</strong> de 2018 <a href="frontfest_c4p.ics">(.ics)</a></p>
         </h2>
         <div class="main-text">
@@ -126,7 +126,7 @@
           <p>FrontFest es una conferencia sin ánimo de lucro y con vocación integradora. No queremos cerrar puertas a nadie ni que dejes de enviar una propuesta por motivos sociales o económicos. Si tienes cualquier duda, pregunta o idea para mejorar, escríbenos un email o contacta a través de las redes sociales.</p>
         </div>
         <a href="https://www.koliseo.com/frontfest/2019/r4p/5733179054882816#/" target="_blank" class="btn">
-          Envíanos tu propuesta <img class="main-arrow" src="images/arrow-point-to-right.svg">
+          Envíanos tu propuesta <img class="main-arrow" src="images/arrow-point-to-right.svg" alt="Flecha derecha">
         </a>
       </div>
 
@@ -216,7 +216,7 @@
 
     <aside class="aside aside-bottom">
       <div class="aside-wrapper">
-        <p><a href="http://www.lanavemadrid.com/" target="_blank"><img src="images/la-nave-madrid.png"></a></p>
+        <p><a href="http://www.lanavemadrid.com/" target="_blank"><img src="images/la-nave-madrid.png" alt="La Nave Madrid"></a></p>
         <p><a class="aside-hashtag" href="https://twitter.com/hashtag/FrontFest19?src=hash" target="_blank">#FrontFest19</a></p>
         <p>Ediciones anteriores:
           <a href="https://2017.frontfest.es" target="_blank">2017</a>
