Link manifest.json in index.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   
   <link rel="icon" href="images/logo-280x280.png" />
   <link rel="canonical" href="https://frontfest.es" />
-
+  <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
 </head>
 <body>
