Get back previous icon

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <meta property="og:image" content="https://frontfest.es/images/logo-280x280.png" /> <!-- when you post this page url in facebook, this image will be shown -->
   <!-- facebook open graph ends from here -->
   
-  <link rel="icon" href="images/frontfest-logo-circle.png" />
+  <link rel="icon" href="images/logo-280x280.png" />
   <link rel="canonical" href="https://frontfest.es" />
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
