--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <meta name="twitter:url" content="https://frontfest.es" />
   <meta name="twitter:title" content="La conferencia para toda la comunidad front-end" /> <!-- maximum 140 char -->
   <meta name="twitter:description" content="Madrid, 9 de febrero de 2019" /> <!-- maximum 140 char -->
-  <meta name="twitter:image" content="https://frontfest.es/images/logo-280x280.png" />  <!-- when you post this page url in twitter , this image will be shown -->
+  <meta name="twitter:image" content="https://frontfest.es/images/frontfest-logo-128x128.png" />  <!-- when you post this page url in twitter , this image will be shown -->
   <!-- twitter card ends from here -->
 
   <!-- facebook open graph  -->
@@ -28,10 +28,10 @@
   <meta property="og:site_name" content="FrontFest" />
   <meta property="og:description" content="Madrid, 9 de febrero de 2019" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://frontfest.es/images/logo-280x280.png" /> <!-- when you post this page url in facebook, this image will be shown -->
+  <meta property="og:image" content="https://frontfest.es/images/frontfest-logo-128x128.png" /> <!-- when you post this page url in facebook, this image will be shown -->
   <!-- facebook open graph ends from here -->
   
-  <link rel="icon" href="images/logo-280x280.png" />
+  <link rel="icon" href="images/frontfest-logo-128x128.png" />
   <link rel="canonical" href="https://frontfest.es" />
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
