Add first three speakers

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         <ul class="aside-list">
           <li><a href="https://blog.frontfest.es" target="_blank">→ Blog</a></li>
           <li><a href="#c4p">→ Call For Proposals</a></li>
+          <li><a href="#ponentes">→ Ponentes</a></li>
           <li><a href="#tabla-patrocinios">→ Tabla de patrocinios</a></li>
           <li><a href="#cdc">→ Código de conducta</a></li>
           <li><a href="#quienes-somos">→ Quiénes somos</a></li>
@@ -79,7 +80,7 @@
     <main class="main">
 
       <div class="alert">
-        ¡Anímate a enviar una propuesta! Quedan muy pocos días para que finalice el Call For Proposals. <a href="#c4p">Más información »</a>
+        ¡Anímate a enviar una propuesta! Quedan unas pocas horas para que finalice el Call For Proposals. <a href="#c4p">Más información »</a>
       </div>
 
       <div class="main-intro">
@@ -121,6 +122,47 @@
         <a href="https://www.koliseo.com/frontfest/2019/r4p/5733179054882816#/" target="_blank" class="btn">
           Envíanos tu propuesta <img class="main-arrow" src="images/arrow-point-to-right.svg" alt="Flecha derecha">
         </a>
+      </div>
+
+      <hr>
+
+      <div class="main-wrapper">
+        <h1 id="ponentes">Ponentes</h1>
+        <div class="speakers">
+          <div class="speaker">
+            <div class="speaker-wrapper">
+              <img src="images/photos/EduardoSanMartin.jpg">
+              <div class="speaker-desc">
+                <a href="https://twitter.com/posva"><img src="images/icons/bw/Twitter.svg"></a>
+                <a href="https://github.com/posva"><img src="images/icons/bw/Github.svg"></a>
+              </div>
+              <div class="speaker-name">Eduardo San Martín</div>
+            </div>
+          </div>
+          <div class="speaker">
+            <div class="speaker-wrapper">
+              <img src="images/photos/JoseAntonioVela.jpg">
+              <div class="speaker-desc">
+                <a href="https://twitter.com/ecosdegenero"><img src="images/icons/bw/Twitter.svg"></a>
+                <a href="https://www.youtube.com/user/josevelagenero"><img src="images/icons/bw/YouTube.svg"></a>
+                <a href="https://www.linkedin.com/in/joseamvela"><img src="images/icons/bw/Linkedin.svg"></a>
+              </div>
+              <div class="speaker-name">José A. Vela</div>
+            </div>
+          </div>
+          <div class="speaker">
+            <div class="speaker-wrapper">
+              <img src="images/photos/CristinaPonce.jpg">
+              <div class="speaker-desc">
+                <a href="https://twitter.com/CristinaGrim"><img src="images/icons/bw/Twitter.svg"></a>
+                <a href="https://github.com/crisgrim"><img src="images/icons/bw/Github.svg"></a>
+                <a href="https://www.linkedin.com/in/cristina-ponce/"><img src="images/icons/bw/Linkedin.svg"></a>
+              </div>
+              <div class="speaker-name">Cristina Ponce</div>
+            </div>
+          </div>
+        </div>
+        <p>... y 5 más que serán elegidos a través del Call for Proposals, y anunciados próximamente.</p>
       </div>
 
       <hr>
