Fix layout problems in Chrome

--- a/index.html
+++ b/index.html
@@ -131,7 +131,9 @@
         <div class="speakers">
           <div class="speaker">
             <div class="speaker-wrapper">
-              <img src="images/photos/EduardoSanMartin.jpg">
+              <div class="speaker-img">
+                <img src="images/photos/EduardoSanMartin.jpg">
+              </div>
               <div class="speaker-desc">
                 <a href="https://twitter.com/posva"><img src="images/icons/bw/Twitter.svg"></a>
                 <a href="https://github.com/posva"><img src="images/icons/bw/Github.svg"></a>
@@ -141,8 +143,10 @@
           </div>
           <div class="speaker">
             <div class="speaker-wrapper">
-              <img src="images/photos/JoseAntonioVela.jpg">
-              <div class="speaker-desc">
+                <div class="speaker-img">
+                  <img src="images/photos/JoseAntonioVela.jpg">
+                </div>
+                <div class="speaker-desc">
                 <a href="https://twitter.com/ecosdegenero"><img src="images/icons/bw/Twitter.svg"></a>
                 <a href="https://www.youtube.com/user/josevelagenero"><img src="images/icons/bw/YouTube.svg"></a>
                 <a href="https://www.linkedin.com/in/joseamvela"><img src="images/icons/bw/Linkedin.svg"></a>
@@ -152,8 +156,10 @@
           </div>
           <div class="speaker">
             <div class="speaker-wrapper">
-              <img src="images/photos/CristinaPonce.jpg">
-              <div class="speaker-desc">
+                <div class="speaker-img">
+                  <img src="images/photos/CristinaPonce.jpg">
+                </div>
+                <div class="speaker-desc">
                 <a href="https://twitter.com/CristinaGrim"><img src="images/icons/bw/Twitter.svg"></a>
                 <a href="https://github.com/crisgrim"><img src="images/icons/bw/Github.svg"></a>
                 <a href="https://www.linkedin.com/in/cristina-ponce/"><img src="images/icons/bw/Linkedin.svg"></a>
