Modify speakers text

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             </div>
           </div>
         </div>
-        <p>... y 5 más que serán elegidos a través del Call for Proposals, y anunciados próximamente.</p>
+        <p>... y 5 más que se elegirán a través del Call for Proposals y se anunciarán en los próximas días.</p>
       </div>
 
       <hr>
