--- a/index.html
+++ b/index.html
@@ -135,21 +135,22 @@
                 <img src="images/photos/EduardoSanMartin.jpg">
               </div>
               <div class="speaker-desc">
-                <a href="https://twitter.com/posva"><img src="images/icons/bw/Twitter.svg"></a>
-                <a href="https://github.com/posva"><img src="images/icons/bw/Github.svg"></a>
+                <a target="_blank" href="https://twitter.com/posva"><img src="images/icons/color/Twitter.svg"></a>
+                <a target="_blank" href="https://github.com/posva"><img src="images/icons/color/Github.svg"></a>
               </div>
               <div class="speaker-name">Eduardo San Martín</div>
             </div>
           </div>
           <div class="speaker">
             <div class="speaker-wrapper">
-                <div class="speaker-img">
-                  <img src="images/photos/JoseAntonioVela.jpg">
-                </div>
-                <div class="speaker-desc">
-                <a href="https://twitter.com/ecosdegenero"><img src="images/icons/bw/Twitter.svg"></a>
-                <a href="https://www.youtube.com/user/josevelagenero"><img src="images/icons/bw/YouTube.svg"></a>
-                <a href="https://www.linkedin.com/in/joseamvela"><img src="images/icons/bw/Linkedin.svg"></a>
+              <div class="speaker-img">
+                <img src="images/photos/JoseAntonioVela.jpg">
+              </div>
+              <div class="speaker-desc">
+                <a target="_blank" href="https://ecosdegenero.blogspot.com/"><img src="images/icons/color/Browser.svg"></a>
+                <a target="_blank" href="https://twitter.com/ecosdegenero"><img src="images/icons/color/Twitter.svg"></a>
+                <a target="_blank" href="https://www.youtube.com/user/josevelagenero"><img src="images/icons/color/YouTube.svg"></a>
+                <a target="_blank" href="https://www.linkedin.com/in/joseamvela"><img src="images/icons/color/Linkedin.svg"></a>
               </div>
               <div class="speaker-name">José A. Vela</div>
             </div>
@@ -160,9 +161,9 @@
                   <img src="images/photos/CristinaPonce.jpg">
                 </div>
                 <div class="speaker-desc">
-                <a href="https://twitter.com/CristinaGrim"><img src="images/icons/bw/Twitter.svg"></a>
-                <a href="https://github.com/crisgrim"><img src="images/icons/bw/Github.svg"></a>
-                <a href="https://www.linkedin.com/in/cristina-ponce/"><img src="images/icons/bw/Linkedin.svg"></a>
+                <a target="_blank" href="https://twitter.com/CristinaGrim"><img src="images/icons/color/Twitter.svg"></a>
+                <a target="_blank" href="https://github.com/crisgrim"><img src="images/icons/color/Github.svg"></a>
+                <a target="_blank" href="https://www.linkedin.com/in/cristina-ponce/"><img src="images/icons/color/Linkedin.svg"></a>
               </div>
               <div class="speaker-name">Cristina Ponce</div>
             </div>
