--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <main class="main">
 
       <div class="alert">
-        ¡Anímate a enviar una propuesta! Quedan unas pocas horas para que finalice el Call For Proposals. <a href="#c4p">Más información »</a>
+        Todavía quedan patrocinios disponibles. Si tienes una empresa, puedes colaborar con FrontFest y darte visibilidad. <a href="#tabla-patrocinios">Más información »</a>
       </div>
 
       <div class="main-intro">
@@ -95,33 +95,6 @@
             <img src="./images/frontfest-logo.svg" alt="FrontFest">            
           </div>
         </div>
-      </div>
-
-      <div class="main-wrapper">
-        <h1 id="c4p">¡Participa en nuestro Call for Proposals!</h1>
-        <h2 class="main-dates">
-          <img class="main-calendar" src="images/calendar.svg" alt="Calendario">
-          <p>Del <strong>7 de septiembre</strong> al <strong>11 de noviembre</strong> de 2018 <a href="frontfest_c4p.ics">(.ics)</a></p>
-        </h2>
-        <div class="main-text">
-          <p>Nuestro objetivo es que FrontFest sea una experiencia interesante para los asistentes y toda la comunidad en general, donde podamos conocernos, inspirarnos, recabar ideas y aprender de gente experimentada, pero también que nos permita descubrir nuevos talentos del mundo del frontend.</p>
-          <ul class="main-ul">
-            <li>Valoraremos las propuestas <strong>autocontenidas, originales e innovadoras</strong>, ya sea por los temas a tratar o por el propio formato.</li>
-            <li>Nos encantan las <strong>charlas técnicas</strong>, de cualquier nivel, con concrección y rigurosidad.</li>
-            <li>También los gustan mucho las <strong>charlas más transversales</strong>, que hablen de las nuevas experiencias que podemos aportar como desarrolladores, la interacción con otras disciplinas, la repercusión social, la inclusividad y la visión de futuro.</li>  
-          </ul>
-          <p>Si tu propuesta resulta seleccionada, ten en cuenta que:</p>
-          <ul class="main-ul">
-            <li>Dispondrás de <strong>45 minutos, incluyendo preparación, charla y turno de preguntas</strong>. Recomendamos por tanto que la charla en sí misma dure hasta un máximo de 40 minutos.
-            <li>Al igual que otros años, correremos con todos tus <strong>gastos de desplazamiento</strong>. Si vienes desde fuera de Madrid, también <strong>te pagaremos el alojamiento</strong>.</li>
-            <li>Podrás asistir a la <strong>cena de ponentes</strong> el día anterior al evento.</li>
-            <li>Este año, además, recibirás <strong>una entrada extra para acceder al evento</strong> que podrás regalar a quien desees.</li>
-          </ul>
-          <p>FrontFest es una conferencia sin ánimo de lucro y con vocación integradora. No queremos cerrar puertas a nadie ni que dejes de enviar una propuesta por motivos sociales o económicos. Si tienes cualquier duda, pregunta o idea para mejorar, escríbenos un email o contacta a través de las redes sociales.</p>
-        </div>
-        <a href="https://www.koliseo.com/frontfest/2019/r4p/5733179054882816#/" target="_blank" class="btn">
-          Envíanos tu propuesta <img class="main-arrow" src="images/arrow-point-to-right.svg" alt="Flecha derecha">
-        </a>
       </div>
 
       <hr>
