Add some sponsots

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         <ul class="aside-list">
           <li><a href="https://blog.frontfest.es" target="_blank">→ Blog</a></li>
           <li><a href="#ponentes">→ Ponentes</a></li>
+          <li><a href="#patrocinadores">→ Patrocinadores</a></li>
           <li><a href="#tabla-patrocinios">→ Tabla de patrocinios</a></li>
           <li><a href="#cdc">→ Código de conducta</a></li>
           <li><a href="#quienes-somos">→ Quiénes somos</a></li>
@@ -140,6 +141,29 @@
           </div>
         </div>
         <p>... y 5 más que se elegirán a través del Call for Proposals y se anunciarán en los próximas días.</p>
+      </div>
+
+      <hr>
+
+      <div class="main-wrapper">
+        <h1 id="patrocinadores">Patrocinadores</h1>
+        <h2>Platinum</h2>
+        <div>
+          <a href="https://www.paradigmadigital.com/"><div class="sponsor-platinum"><img src="images/sponsors/paradigma.png"></div></a>
+        </div>
+        <h2>Gold</h2>
+        <div>
+          <a href="https://www.opensistemas.com//"><div class="sponsor-gold"><img src="images/sponsors/open-sistemas.png"></div></a>
+        </div>
+        <h2>Silver</h2>
+        <div class="sponsor-row">
+          <a href="https://www.plainconcepts.com/"><div class="sponsor-silver"><img src="images/sponsors/plain-concepts.png"></div></a>
+          <a href="https://machiina.com/"><div class="sponsor-silver"><img src="images/sponsors/machiina.svg"></div></a>
+        </div>
+        <h2>En especies</h2>
+        <div>
+          <a href="https://egghead.io/"><div class="sponsor-inkind"><img src="images/sponsors/egghead.svg"></div></a>
+        </div>
       </div>
 
       <hr>
