Adjust sponsor logos for small screens

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <main class="main">
 
       <div class="alert">
-        Todavía quedan patrocinios disponibles. Si tienes una empresa, puedes colaborar con FrontFest y darte visibilidad. <a href="#tabla-patrocinios">Más información »</a>
+        Todavía quedan patrocinios disponibles. Si tienes una empresa, puedes colaborar con FrontFest y darle visibilidad. <a href="#tabla-patrocinios">Más información »</a>
       </div>
 
       <div class="main-intro">
