--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <div class="speaker">
             <div class="speaker-wrapper">
               <div class="speaker-img">
-                <img src="images/photos/EduardoSanMartin.jpg">
+                <img alt="Eduardo San Martín" src="images/photos/EduardoSanMartin.jpg">
               </div>
               <div class="speaker-desc">
                 <a target="_blank" href="https://twitter.com/posva"><img src="images/icons/color/Twitter.svg"></a>
@@ -115,7 +115,7 @@
           <div class="speaker">
             <div class="speaker-wrapper">
               <div class="speaker-img">
-                <img src="images/photos/JoseAntonioVela.jpg">
+                <img alt="José Antonio Vela" src="images/photos/JoseAntonioVela.jpg">
               </div>
               <div class="speaker-desc">
                 <a target="_blank" href="https://ecosdegenero.blogspot.com/"><img src="images/icons/color/Browser.svg"></a>
@@ -129,7 +129,7 @@
           <div class="speaker">
             <div class="speaker-wrapper">
                 <div class="speaker-img">
-                  <img src="images/photos/CristinaPonce.jpg">
+                  <img alt="Cristina Ponce" src="images/photos/CristinaPonce.jpg">
                 </div>
                 <div class="speaker-desc">
                 <a target="_blank" href="https://twitter.com/CristinaGrim"><img src="images/icons/color/Twitter.svg"></a>
@@ -149,20 +149,20 @@
         <h1 id="patrocinadores">Patrocinadores</h1>
         <h2>Platinum</h2>
         <div>
-          <a href="https://www.paradigmadigital.com/"><div class="sponsor-platinum"><img src="images/sponsors/paradigma.png"></div></a>
+          <a href="https://www.paradigmadigital.com/"><div class="sponsor-platinum"><img alt="Paradigma Digital" src="images/sponsors/paradigma.png"></div></a>
         </div>
         <h2>Gold</h2>
         <div>
-          <a href="https://www.opensistemas.com//"><div class="sponsor-gold"><img src="images/sponsors/open-sistemas.png"></div></a>
+          <a href="https://www.opensistemas.com//"><div class="sponsor-gold"><img alt="Open Sistemas" src="images/sponsors/open-sistemas.png"></div></a>
         </div>
         <h2>Silver</h2>
         <div class="sponsor-row">
-          <a href="https://www.plainconcepts.com/"><div class="sponsor-silver"><img src="images/sponsors/plain-concepts.png"></div></a>
-          <a href="https://machiina.com/"><div class="sponsor-silver"><img src="images/sponsors/machiina.svg"></div></a>
+          <a href="https://www.plainconcepts.com/"><div class="sponsor-silver"><img alt="Open Sistemas" src="images/sponsors/plain-concepts.png"></div></a>
+          <a href="https://machiina.com/"><div class="sponsor-silver"><img alt="Machiina" src="images/sponsors/machiina.svg"></div></a>
         </div>
         <h2>En especies</h2>
         <div>
-          <a href="https://egghead.io/"><div class="sponsor-inkind"><img src="images/sponsors/egghead.svg"></div></a>
+          <a href="https://egghead.io/"><div class="sponsor-inkind"><img alt="egghead" src="images/sponsors/egghead.svg"></div></a>
         </div>
       </div>
 
